Don't promote position: fixed elements with composited descendants if they don't scroll

BUG=715699
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2839263002
Cr-Commit-Position: refs/heads/master@{#469584}

Former-commit-id: 9b503962a017a8d69adfdae9300684c299922640