third_party/WebKit/Source/core/layout/compositing/CompositingRequirementsUpdater.cpp
@@ -166,6 +166,7 @@ static bool RequiresCompositingOrSquashing(CompositingReasons reasons) {
 }
 
 static CompositingReasons SubtreeReasonsForCompositing(
+    const CompositingReasonFinder& compositing_reason_finder,
     PaintLayer* layer,
     bool has_composited_descendants,
     bool has3d_transformed_descendants) {
@@ -190,9 +191,16 @@ static CompositingReasons SubtreeReasonsForCompositing(
     if (layer->GetLayoutObject().HasClipRelatedProperty())
       subtree_reasons |= kCompositingReasonClipsCompositingDescendants;
 
-    if (layer->GetLayoutObject().Style()->GetPosition() == EPosition::kFixed)
+    // We ignore LCD text here because we are required to composite
+    // scroll-dependant fixed position elements with composited descendants for
+    // correctness - even if we lose LCD.
+    const bool ignore_lcd_text = true;
+    if (layer->GetLayoutObject().Style()->GetPosition() == EPosition::kFixed &&
+        compositing_reason_finder.RequiresCompositingForScrollDependentPosition(
+            layer, ignore_lcd_text)) {
       subtree_reasons |=
           kCompositingReasonPositionFixedWithCompositedDescendants;
+    }
   }
 
   // A layer with preserve-3d or perspective only needs to be composited if
@@ -497,7 +505,8 @@ void CompositingRequirementsUpdater::UpdateRecursive(
     // descendant layers.
     CompositingReasons subtree_compositing_reasons =
         SubtreeReasonsForCompositing(
-            layer, child_recursion_data.subtree_is_compositing_,
+            compositing_reason_finder_, layer,
+            child_recursion_data.subtree_is_compositing_,
             any_descendant_has3d_transform);
     reasons_to_composite |= subtree_compositing_reasons;
     if (!will_be_composited_or_squashed && can_be_composited &&
